<resources>
    <string name="app_name">CPC App</string>
    <string name="full_name">Full Name</string>
    <string name="enter_full_name_as_nsu_id">Enter full name as NSU ID</string>
    <string name="nsu_id">NSU ID</string>
    <string name="enter_nsu_id_7_digit">Enter NSU ID (7-Digit)</string>
    <string name="nsu_email">NSU Email</string>
    <string name="enter_nsu_email">Enter NSU Email</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="enter_date_of_birth">Enter Date of Birth</string>
    <string name="nid">NID</string>
    <string name="enter_nid">Enter NID</string>
    <string name="submit">Submit</string>
    <string name="password">Password</string>
    <string name="enter_password_8_characters">Enter Password (8 Characters)</string>
    <string name="enter_school_name">Enter school name</string>
    <string name="school">School</string>
    <string name="enter_department_name">Enter department name</string>
    <string name="department">Department</string>
    <string name="phone">Phone</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="personal_email">Personal Email</string>
    <string name="enter_personal_email">Enter personal email</string>
    <string name="enter_country_name">Enter country name</string>
    <string name="country">Country</string>
    <string name="district">District</string>
    <string name="enter_district_name">Enter district name</string>
    <string name="enter_post_office">Enter post office</string>
    <string name="post_office">Post Office</string>
    <string name="enter_police_station">Enter police station</string>
    <string name="police_station">Police Station</string>
    <string name="postal_code">Postal Code</string>
    <string name="enter_postal_code">Enter postal code</string>
    <string name="enter_house_village_city">Enter House/Village/City</string>
    <string name="house_village_city">House/Village/City</string>
    <string name="road_block_sector">Road/Block/Sector</string>
    <string name="enter_road_block_sector">Enter Road/Block/Sector</string>
    <string name="update">Update</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home">Home</string>
    <string name="notice_board">Notice Board</string>
    <string name="logout">Logout</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile">Profile</string>
    <string name="upload_file">Upload File</string>
    <string name="select_pdf_file">Select PDF File...</string>
    <string name="dashboard">Dashboard</string>
    <string name="add_job_post">Add Job Post</string>
    <string name="delete_job_post">Delete Job Post</string>
    <string name="add_event">Add Event</string>
    <string name="delete_event">Delete Event</string>
    <string name="company_name">Company Name</string>
    <string name="enter_company_name">Enter company name</string>
    <string name="position_name">Position Name</string>
    <string name="enter_position_name">Enter position name</string>
    <string name="job_type">Job Type</string>
    <string name="salary_range">Salary Range</string>
    <string name="enter_salary_range">Enter salary range</string>
    <string name="job_description">Job Description</string>
    <string name="select_file">Select File ....</string>
    <string name="application_date">Application Date</string>
    <string name="select_date">Select Date...</string>
    <string name="company_recruiter_email">Company Recruiter Email</string>
    <string name="enter_recruiter_email">Enter recruiter email</string>
    <string name="post">Post</string>
    <string name="job_details">Job Details</string>
    <string name="apply">Apply</string>
    <string-array name="job_types">
        <item>Internship</item>
        <item>Full-Time</item>
    </string-array>
</resources>